# horus

./: .cproject  .gitignore  .hgignore  .project  CMakeLists.txt  CMakeLists.txt.bak  Makefile  OpenCVConfig.cmake  README.txt  clock.cpp  clock.h  common.h  cudacommon.h  decorator.cpp  decorator.h  eyelidsegmentator.cpp  eyelidsegmentator.h  helperfunctions.cpp  helperfunctions.h  horus.i  horus.pro  irisdatabase.cpp  irisdatabase.cu  irisdatabase.h  irisdatabase_kernel.cu  irisdatabasecuda.cpp  irisdatabasecuda.h  irisdctencoder.cpp  irisdctencoder.h  irisencoder.cpp  irisencoder.h  irissegmentator.cpp  irissegmentator.h  iristemplate.cpp  iristemplate.h  loggabor1dfilter.cpp  loggabor1dfilter.h  loggaborencoder.cpp  loggaborencoder.h  main.cpp  (+20 more)
android/: .classpath  .project  AndroidManifest.xml  android_env.sh  build.properties  build.xml  default.properties
android/jni/: Android.mk
android/res/layout/: main.xml
android/res/values/: strings.xml
android/src/com/mm/horus/: CameraViewBase.java  HorusActivity.java  HorusCameraView.java
dbutils/: base_vacia.db  convert_old_db.py  import.py  purgar_base.py  tablas.sql
external_deps/ISCAN_2_Driver/: CMakeLists.txt  ISCAN2CaptureDriver.cpp  ISCAN2CaptureDriver.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
python_interface/: CMakeLists.txt  Makefile  horus.i  horus_cuda.i  pyhorus.i  rebuild.sh  setup.py  setup.py.in  test.py
scripts/: AContrarioMatching.py  Database.py  Estadisticas.py  Matching.py  PASOS.txt  Procesador.py  Segmentar.py  Suite.py  acontrario.py  calibrar_camara.py  decorar.py  estadisticas_unificadas.py  extraer_textura.py  herramientas.py  identificar.py  inter_base.py  iris.py  procesar.py  simular_identificacion.py  test_performance.py  unificar_bases.py
scripts/horusutils/: Database.py
scripts/procesar_ui/: ImageWidget.py  MainForm.ui  procesar_ui.py
src/: CMakeLists.txt  clock.cpp  clock.h  common.h  common.h.in  cudacommon.h  decorator.cpp  decorator.h  eyedetect.cpp  eyedetect.h  eyedetect_haarcascades.h  eyelidsegmentator.cpp  eyelidsegmentator.h  gaborencoder.cpp  gaborencoder.h  gpuwrapper.cu  helperfunctions.cpp  helperfunctions.h  horus.h  irisdatabase.cpp  irisdatabase.h  irisdatabase_kernel.cu  irisdatabasecuda.cpp  irisdatabasecuda.h  irisdctencoder.h  irisencoder.cpp  irisencoder.h  irissegmentator.cpp  irissegmentator.h  iristemplate.cpp  iristemplate.h  loggaborencoder.cpp  loggaborencoder.h  main.cpp  parameters.cpp  parameters.h  pupilsegmentator.cpp  pupilsegmentator.h  qualitychecker.cpp  qualitychecker.h  (+15 more)
src/drivers/: basedriver.cpp  basedriver.hpp  ueyedriver.cpp  ueyedriver.hpp  v4ldriver.cpp  v4ldriver.hpp
src/horus/: CMakeLists.txt  clock.h  eyedetect.h  eyelidsegmentator.h  gaborencoder.cpp  gaborencoder.h  irisdatabase.cpp  irisdatabase_kernel.cu  irisdctencoder.cpp  iristemplate.cpp  iristemplate.h  loggaborencoder.cpp  loggaborencoder.h  pupilsegmentator.cpp  pupilsegmentator.h  qualitychecker.cpp  segmentator.h  serializer.h  templatecomparator.cpp  tools.cpp  tools.h  videosegmentator.cpp  videosegmentator.h
src/horus/drivers/: basedriver.cpp  imagesequencedriver.cpp  imagesequencedriver.hpp
src/ui-common/: imagewidget.cpp  imagewidget.h
src/ui-debug/: main.cpp
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
ui/: Database.py  ImageWidget.py  MainForm.py  Matching.py  ProcessingThread.py  Registracion.py  SetupForm.py  Utils.py  VideoForm.py  VideoThread.py  main.py
ui-c++/: CMakeLists.txt  Makefile  common.h  debugdialog.cpp  debugdialog.h  debugdialog.ui  imagewidget.cpp  imagewidget.h  irisvideocapture.cpp  irisvideocapture.h  irisvideowidget.cpp  irisvideowidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.bak  matchingdialog.cpp  matchingdialog.h  matchingdialog.ui  processingthread.cpp  processingthread.h  registerdialog.cpp  registerdialog.h  registerdialog.ui  sqlite3irisdatabase.cpp  sqlite3irisdatabase.h  sqlite3wrapper.cpp  sqlite3wrapper.h  ui-c++.pro  ui-c++.pro.in  videothread.cpp  videothread.h
ui-python/: Database.py  ImageWidget.py  MainForm.py  Matching.py
ui-python/_base/: importar_base.py  lista_imagenes.py
ui/_base/: base.db  base_uba.db  base_vacia.db  importar_base.py  tablas.sql
ui/forms/: MainForm.ui  Matching.ui  Registracion.ui
