CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
PROJECT(Horus)

# --- COMPILER SETTINGS ---
IF (CMAKE_COMPILER_IS_GNUCXX)
    # Enable C++11 support
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

# --- REQUIRED LIBRARIES ---
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})


# --- INCLUDE FILES ---
ADD_SUBDIRECTORY(src/horus)
ADD_SUBDIRECTORY(src/ui-debug)
ADD_SUBDIRECTORY(tests)

# --- UNINSTALL ---
CONFIGURE_FILE(
	"${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
	"${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
	IMMEDIATE @ONLY
)

ADD_CUSTOM_TARGET(uninstall
  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
)
