#CONFIGURE_FILE(setup.py.in setup.py)
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

# Find the site-packages dir
EXECUTE_PROCESS(COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
MESSAGE("Installing python extensions to ${PYTHON_SITE_PACKAGES}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/src)		# This is needed for common.h

SET(CMAKE_SWIG_FLAGS "-c++")
SET_SOURCE_FILES_PROPERTIES(horus.i PROPERTIES CPLUSPLUS ON)

IF (CUDA_FOUND)
	SET(${CMAKE_SWIG_FLAGS} "-DUSE_CUDA")
ENDIF ()

SWIG_ADD_MODULE(horus python horus.i)

SWIG_LINK_LIBRARIES(horus ${PYTHON_LIBRARIES} horus)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/_horus.so ${CMAKE_CURRENT_BINARY_DIR}/horus.py DESTINATION ${PYTHON_SITE_PACKAGES})
