FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs REQUIRED)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

# Find the site-packages dir
EXECUTE_PROCESS(COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" 
	OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
MESSAGE(STATUS "Installing python extensions to ${PYTHON_SITE_PACKAGES}")

SET_SOURCE_FILES_PROPERTIES(pyhorus.i PROPERTIES CPLUSPLUS ON)

IF (USE_CUDA)
	SET(CMAKE_SWIG_FLAGS "-DUSE_CUDA")
ENDIF ()
	
SWIG_ADD_MODULE(pyhorus python pyhorus.i ${SOURCES} ${HEADERS})
SWIG_LINK_LIBRARIES(pyhorus ${PYTHON_LIBRARIES} ${OpenCV_LIBS} horus)

IF (MSVC)
	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/pyhorus.py ${CMAKE_CURRENT_BINARY_DIR}/Release/_pyhorus.pyd
		DESTINATION ${PYTHON_SITE_PACKAGES})
ELSE ()
	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/pyhorus.py ${CMAKE_CURRENT_BINARY_DIR}/_pyhorus.so
		DESTINATION ${PYTHON_SITE_PACKAGES})
ENDIF ()
