SET(SOURCES main.cpp ${HORUS_LIB_SOURCES})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

FIND_PACKAGE(Boost REQUIRED COMPONENTS system filesystem date_time program_options thread)

ADD_EXECUTABLE(test ${SOURCES})
TARGET_LINK_LIBRARIES(test ${OpenCV_LIBS} ${Boost_LIBRARIES})

IF (USE_CUDA)
	TARGET_LINK_LIBRARIES(test horus_cuda)
ENDIF (USE_CUDA)
