PROJECT(tests)

SET(test_SOURCES main.cpp)

IF (HORUS_SHARED_LIB)
	ADD_EXECUTABLE(test ${test_SOURCES})
	TARGET_LINK_LIBRARIES(test horus ${OpenCV_LIBS} ${Boost_LIBRARIES})
ELSE ()
	ADD_EXECUTABLE(test ${test_SOURCES} ${HORUS_LIB_SOURCES} ${HORUS_LIB_HEADERS})
	TARGET_LINK_LIBRARIES(test ${OpenCV_LIBS} ${Boost_LIBRARIES})
ENDIF()

